--- a/index.html
+++ b/index.html
@@ -4,16 +4,18 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Odin Recipes</title>
+        <title>Homepage</title>
         <!-- <link rel="stylesheet" href="style.css"> -->
         <!-- <script src="javascript.js" defer></script> -->
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/fried-chicken.html">Fried Chicken</a>
-        <a href="recipes/homemade-tacos.html">Homemade Tacos</a>
-        <a href="recipes/pan-fried-steak.html">Pan Fried Steak</a>
-        <a href="recipes/snow-cream.html">Snow Cream</a>
-        <a href="recipes/super-simple-pork-chops.html">Super Simple Pork Chops</a>
+        <ul>
+            <li><a href="recipes/fried-chicken.html">Fried Chicken</a></li>
+            <li><a href="recipes/homemade-tacos.html">Homemade Tacos</a></li>
+            <li><a href="recipes/pan-fried-steak.html">Pan Fried Steak</a></li>
+            <li><a href="recipes/snow-cream.html">Snow Cream</a></li>
+            <li><a href="recipes/super-simple-pork-chops.html">Super Simple Pork Chops</a></li>
+        </ul>
     </body>
 </html>
