Complete fried chicken recipe page
Add description, ingredients, steps, and cooks note to fried chicken
recipe page.

--- a/recipes/fried-chicken.html
+++ b/recipes/fried-chicken.html
@@ -9,8 +9,63 @@
         <!-- <script src="javascript.js" defer></script> -->
     </head>
     <body>
+        <a href="../index.html">Home</a>
         <h1>Fried Chicken</h1>
         <img src="../images/fried-chicken.jpeg">
-        <a href="../index.html">Home</a>
+        <h2>Description</h2>
+        <p>
+            Recipe for deep fried chicken with a southern taste. The tangy hint of
+            buttermilk under a crispy coating makes this chicken stand out.
+        </p>
+        <h3>Ingredients</h3>
+        <ul>
+            <li>6 chicken thighs</li>
+            <li>6 chicken drumsticks</li>
+            <li>2 tablespoons salt</li>
+            <li>1 quart of cold water</li>
+            <li>2 cups of cold buttermilk</li>
+            <li>1 egg, beaten</li>
+            <li>1 teaspoon of chicken seasoning mix (see note)</li>
+            <li>3 cups of all purpose flour</li>
+            <li>2 tablespoons of chicken seasoning (see note)</li>
+            <li>2 quarts of vegetable oil for frying</li>
+        </ul>
+        <h3>Steps</h3>
+        <ol>
+            <li>
+                Place chicken in a large bowl, cover with cold water, and mix in salt.
+                Cover and refrigerate for at least 8 hours.
+            </li>
+            <li>
+                Rinse chicken thoroughly, mix buttermilk, egg, and 1 teaspoon chicken 
+                seasoning in a large bowl until thoroughly combined.
+            </li>
+            <li>
+                Place chicken in buttermilk mixture and refrigerate for 30 minutes to 
+                1 hour.
+            </li>
+            <li>
+                Heat vegetable oilin deep fryer to 375 degrees F.
+            </li>
+            <li>
+                Place flour and 2 tablespoons of chicken seasoning in shallow bowl
+                and mix until combined. Remove chicken from buttermilk mix, shake off 
+                excess, press into flour, and tap off excess flour.
+            </li>
+            <li>
+                Gently place chicken into hot oil, 3 to 4 pieces at a time; fry until 
+                golden brown, 12 to 15 minutes per batch.
+            </li>
+            <li>
+                Remove chicken to a cooling rack set over paper towels to remove excess 
+                oil before serving.
+            </li>
+        </ol>
+        <h2>Cook's note:</h2>
+        <p>
+            To make seasoning: stir together 2 tablespoons black pepper, 2 tablespoons 
+            garlic powder, 1 tablespoon paprika, and 3 tablespoons salt. Store in an 
+            airtight container.
+        </p>
     </body>
 </html>
