Complete snow cream recipe page
Add deescription, ingredients, and steps to recipe
page
Move Home link to top of recipe page

--- a/recipes/snow-cream.html
+++ b/recipes/snow-cream.html
@@ -9,8 +9,27 @@
         <!-- <script src="javascript.js" defer></script> -->
     </head>
     <body>
+        <a href="../index.html">Home</a>
         <h1>Snow Cream</h1>
         <img src="../images/snow-cream.JPG">
-        <a href="../index.html">Home</a>
+        <h2>Description</h2>
+        <p>
+            Turn fresh snow into ice cream in 5 minutes or less. Add your own toppings. 
+            The possibilities are endless.
+        </p>
+        <h3>Ingredients</h3>
+        <ul>
+            <li>8 cups of fresh clean snow</li>
+            <li>1 14 ounce can of sweetened condensed milk</li>
+            <li>1 tablespoon of vanilla extract</li>
+        </ul>
+        <h3>Steps</h3>
+        <ol>
+            <li>
+                Mix snow, sweetened condensed milk, and vanilla extract in a bowl 
+                until well mixed.
+            </li>
+            <li>That is all there is to it. Enjoy.</li>
+        </ol>
     </body>
 </html>
