Complete super simple pork chops recipe page
Move Home link to top of recipe page
Add Description, Ingredients, and Steps to recipe
page

--- a/recipes/super-simple-pork-chops.html
+++ b/recipes/super-simple-pork-chops.html
@@ -9,8 +9,28 @@
         <!-- <script src="javascript.js" defer></script> -->
     </head>
     <body>
+        <a href="../index.html">Home</a>
         <h1>Super Simple Pork Chops</h1>
         <img src="../images/pork-chops.jpeg">
-        <a href="../index.html">Home</a>
+        <h2>Description</h2>
+        <p>Pork chops with a sweet glaze.</p>
+        <h3>Ingredients</h3>
+        <ul>
+            <li>4 boneless pork loin chops</li>
+            <li>1/4 cup of apple juice</li>
+            <li>1/4 cup of maple syrup</li>
+        </ul>
+        <h3>Steps</h3>
+        <ol>
+            <li>
+                Heat large skillet over medium-high heat. Brown pork chops in pan for 
+                about 4 to 5 minutes per side. Pour in apple juice and maple syrup; 
+                reduce heat and simmer unil the juice has reduced and thickened slightly.
+            </li>
+            <li>
+                Cook until pork is no longer pink in the center. Internal temperature 
+                 should be 145 degrees F.
+            </li>
+        </ol>
     </body>
 </html>
