Complete pan fried steak recipe page
Move Home link to the top of recipe page
Add description, ingredients, and steps to recipe
page

--- a/recipes/pan-fried-steak.html
+++ b/recipes/pan-fried-steak.html
@@ -9,8 +9,58 @@
         <!-- <script src="javascript.js" defer></script> -->
     </head>
     <body>
+        <a href="../index.html">Home</a>
         <h1>Pan Fried Steak</h1>
         <img src="../images/pan-fried-steak.jpg">
-        <a href="../index.html">Home</a>
+        <h2>Description</h2>
+        <p>
+            Pan searing at it's best and the easiest way to cook a steak. 
+        </p>
+        <h3>Ingredients</h3>
+        <ul>
+            <li>
+                2 (12 ounce) New York strip or ribeye steaks about 1 1/2 inches thick
+            </li>
+            <li>1 heaping teaspoon of kosher salt</li>
+            <li>1/2 teaspoon of freshly ground black pepper</li>
+            <li>2 tablespoons of vegetable oil</li>
+            <li>1 tablespoon of unsalted butter</li>
+            <li>A few sprigs of fresh thyme leaves</li>
+        </ul>
+        <h3>Steps</h3>
+        <ol>
+            <li>To begin with, pat steaks with paper towels.</li>
+            <li>Season the steaks all over with salt and pepper.</li>
+            <li>
+                Turn on the exhaust fan and heat a cast iron or stainless steel pan 
+                over medium-high heat until it is very hot.
+            </li>
+            <li>
+                Add oil to the pan and heat until it begins to shimmer and move fluidly
+                around the pan.
+            </li>
+            <li>
+                Carefully set the steaks in the pan, releasing them away from you so 
+                the oil doesn't splatter in your direction. The oil should sizzle.
+            </li>
+            <li>
+                Leave the steaks alone. The steaks need a few minutes undisturbed to 
+                develope a golden crust. Flip the steaks when they release easily and 
+                the bottom is a deep brown color, about 3 minutes. Continue to cook 
+                the steaks for another 3 to 4 minutes on the second side for rare 
+                to medium-rare. (For medium, cook 4 to 5 minutes on second side; for
+                well-done, cook 5 to 6 minutes on second side).
+            </li>
+            <li>
+                During the last minute of cooking, add the butter and thyme sprigs to 
+                the pan with the steaks.
+            </li>
+            <li>
+                If you serving the steaks unsliced, transfer them to plates and serve 
+                hot. If you plan to slice the steaks, transfer them to a cutting board 
+                and let rest, covered with aluminum foil, for 5 to 10 minutes; then 
+                slice thinly against the grain.
+            </li>
+        </ol>
     </body>
 </html>
