Complete homemade tacos recipe page
Move Home link to the top of homemade tacos recipe page
Add description, ingredients, and steps to homemade tacos recipe page

--- a/recipes/homemade-tacos.html
+++ b/recipes/homemade-tacos.html
@@ -9,8 +9,57 @@
         <!-- <script src="javascript.js" defer></script> -->
     </head>
     <body>
+        <a href="../index.html">Home</a>
         <h1>Homemade Tacos</h1>
         <img src="../images/homemade-tacos.jpg">
-        <a href="../index.html">Home</a>
+        <h2>Description</h2>
+        <p>
+            Homemade tacos are the perfect busy weeknight dinner. These easy ground beef 
+            tacos are better than take-out and ready in minutes.            
+        </p>
+        <h3>Ingredients</h3>
+        <ul>
+            <li>1 lb. 90% to 93% lean ground beef</li>
+            <li>1 tablespoon of chili powder</li>
+            <li>1 teaspoon of ground cumin</li>
+            <li>3/4 teaspoon of salt</li>
+            <li>1/2 teaspoon of dried oregano</li>
+            <li>1/2 teaspoon of garlic powder</li>
+            <li>!/4 teaspoon of ground black pepper</li>
+            <li>1/2 cup of tomato sauce</li>
+            <li>1/4 cup of water</li>
+            <li>
+                12 taco shells - either hard shells or small 6 inch soft flour 
+                tortillas will work
+            </li>
+            <li>
+                Optional taco toppings: shredded cheese, shredded lettuce, chopped 
+                tomatoes, diced onions, taco sauce, sour cream, guacamole, etc.
+            </li>
+        </ul>
+        <h3>Steps</h3>
+        <ol>
+            <li>
+                Add ground beef to a large skillet over medium-high heat. Break the 
+                meat apart with a wooden spoon. Add chili powder, cumin, salt, oregano, 
+                garlic powder, and pepper to the meat. Stir well. Cook until the 
+                meat is cooked through, about 6 to 8 minutes, stirring occasionally.
+            </li>
+            <li>
+                Reduce heat to medium. Add the tomato sauce and water. Stir to 
+                combine. cook, sitrring occasionally, for 7 to 8 minutes, until some 
+                of the liquid evaporates but the meat mixture is still a little 
+                saucy. Remove from the heat.
+            </li>
+            <li>
+                Warm taco shell according to the package directions.
+            </li>
+            <li>
+                Fill the taco shells with 2 heaping tablespoons of taco meat. Top 
+                with desired taco toppings: shredded cheese, shredded lettuce, 
+                chopped tomatoes, diced onions, taco sauce, sour cream, guacamole, 
+                etc.
+            </li>
+        </ol>
     </body>
 </html>
